  - Added configure option to compile in GUI frontend for Bochs debugger,
    to enable configure with --enable-debugger-gui option.
    The GUI debugger frontend is enabled by default with Bochs debugger.

- BIOS
  - Added S3 (suspend to RAM) ACPI state to BIOS (patch by Gleb Natapov)
  - Implemented MTRR support in the bios
  - Bug fixes

- I/O Devices
  - Added user plugin support
  - Hard drive / cdrom
    - PACKET-DMA feature now supported by all ATAPI commands
    - ATAPI command 0x1A added (based on the Qemu implementation)
  - sb16
    - Added limited ALSA sound support on Linux (PCM/MIDI output)
    - FM synthesizer now usable with MIDI output (simple piano only)
      - Fixed OPL frequency to MIDI note translation
      - Fixed MIDI output command
  - keyboard
    - added keyboard controller commands 0xCA and 0xCB
  - USB
    - initial USB OHCI support written by Ben Lunt (Win98 detects
      the controller, connecting devices not implemented yet)
  - VGA
    - VBE video memory increased to 16 MB
  - I/O APIC
    - implemented I/O APIC device hardware reset

- General
  - Bochs param tree index keys are case independent now

- Misc
  - Updated Bochs TESTFORM to version 0.4

- SF patches applied
 [1895665] kvm: bios: add support to memory above the pci hole by Izik Eidus
 [2403372] rombios: check for valid cdrom before using it by Sebastian
 [2307269] acpi: handle S3 by Sebastian
 [2354134] TAP networking on Solaris/Sparc repaired
 [2144692] The scsi device can not complete its writing data command by naiyue
 [1827082] [PATCH] Configurable CPU vendor by Marcel Sondaar
 [2217229] Panic on EBDA overflow in rombios32 by Sebastian
 [2210194] Log pci class code by Sebastian
 [1984662] red led for disk write and titlebar mod by ggbsf
 [2142955] Fix for monitor/mwait by Doug Gibson
 [2137774] Patch to fix bug: cdrom: read_block: lseek returned error by Gabor Olah
 [2134642] Fix scan_to_scanascii table for F11 and F12 by Ben Guthro & Steve Ofsthun